--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ img {
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 24px;
-  line-height: 1.17;
+  line-height: decimal-round(1.16667, 2);
   letter-spacing: 0.03em;
   color: var(--accent-color);
   display: inline-block;
@@ -101,7 +101,7 @@ img {
   .logo {
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.19;
+    line-height: decimal-round(1.19231, 2);
     letter-spacing: 0.03em;
   }
 }
@@ -198,7 +198,7 @@ img {
 .navigation__link {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: decimal-round(1.14286, 2);
   letter-spacing: 0.02em;
   color: var(--second-color);
   display: block;
@@ -245,7 +245,7 @@ img {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: decimal-round(1.875, 2);
   letter-spacing: 0.06em;
   text-align: center;
   cursor: pointer;
@@ -298,7 +298,7 @@ img {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.63;
+  line-height: decimal-round(1.625, 2);
   letter-spacing: 0.03em;
   padding: 6px 22px;
   cursor: pointer;
@@ -327,7 +327,7 @@ img {
   align-items: center;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: decimal-round(1.71429, 2);
   letter-spacing: 0.03em;
   color: var(--transparant-color);
   transition: color 250ms var(--timing-function);
@@ -411,7 +411,7 @@ img {
 .header__contacts-link {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: decimal-round(1.14286, 2);
   letter-spacing: 0.02em;
   color: var(--main-color);
   transition: color 250ms var(--timing-function);
@@ -477,7 +477,7 @@ img {
 .hero__title {
   font-weight: 900;
   font-size: 26px;
-  line-height: 1.62;
+  line-height: decimal-round(1.61538, 2);
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
@@ -490,7 +490,7 @@ img {
   .hero__title {
     font-weight: 900;
     font-size: 44px;
-    line-height: 1.36;
+    line-height: decimal-round(1.36364, 2);
     letter-spacing: 0.06em;
     max-width: 696px;
   }
@@ -546,7 +546,7 @@ img {
 .about__dscrptn {
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: decimal-round(1.71429, 2);
   letter-spacing: 0.03em;
 }
 
@@ -554,7 +554,7 @@ img {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: decimal-round(1.14286, 2);
   letter-spacing: 0.03em;
   color: var(--second-color);
   margin-bottom: 10px;
@@ -625,7 +625,7 @@ img {
 .occupation__title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17;
+  line-height: decimal-round(1.16667, 2);
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--second-color);
@@ -657,7 +657,7 @@ img {
   width: 100%;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: decimal-round(1.14286, 2);
   letter-spacing: 0.03em;
   text-align: center;
   text-transform: uppercase;
@@ -681,7 +681,7 @@ img {
 .developments__title {
   font-weight: 700;
   font-size: 28px;
-  line-height: 1.18;
+  line-height: decimal-round(1.17857, 2);
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--second-color);
@@ -692,7 +692,7 @@ img {
   .developments__title {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.17;
+    line-height: decimal-round(1.16667, 2);
     letter-spacing: 0.03em;
     margin-bottom: 50px;
   }
@@ -701,7 +701,7 @@ img {
 .developments__title-team {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19;
+  line-height: decimal-round(1.1875, 2);
   letter-spacing: 0.03em;
   color: var(--second-color);
   margin-bottom: 10px;
@@ -710,7 +710,7 @@ img {
 .developments__dscrptn {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.19;
+  line-height: decimal-round(1.1875, 2);
   letter-spacing: 0.03em;
   margin-bottom: 16px;
 }
@@ -771,7 +771,7 @@ img {
 .customers__title {
   font-weight: 700;
   font-size: 28px;
-  line-height: 1.18;
+  line-height: decimal-round(1.17857, 2);
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--second-color);
@@ -782,7 +782,7 @@ img {
   .customers__title {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.17;
+    line-height: decimal-round(1.16667, 2);
     letter-spacing: 0.03em;
     margin-bottom: 50px;
   }
@@ -876,7 +876,7 @@ img {
 .portfolio_title-link {
   font-weight: 700;
   font-size: 18px;
-  line-height: 2;
+  line-height: decimal-round(2, 2);
   letter-spacing: 0.06em;
   color: var(--second-color);
   margin-bottom: 4px;
@@ -885,7 +885,7 @@ img {
 .portfolio__description {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: decimal-round(1.875, 2);
   letter-spacing: 0.03em;
   color: var(--main-color);
 }
@@ -953,7 +953,7 @@ img {
   height: 100%;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.56;
+  line-height: decimal-round(1.55556, 2);
   letter-spacing: 0.03em;
   color: var(--main-lite-color);
   background-color: transparent;
@@ -1016,7 +1016,7 @@ img {
 .footer__join {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: decimal-round(1.14286, 2);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-lite-color);
@@ -1068,7 +1068,7 @@ img {
 .footer-form__subscriber {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: decimal-round(1.14286, 2);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-lite-color);
@@ -1109,7 +1109,7 @@ img {
 .footer-form__input::placeholder {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.25;
+  line-height: decimal-round(1.25, 2);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -1213,7 +1213,7 @@ img {
 .modal__description-callu {
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.28;
+  line-height: decimal-round(1.27778, 2);
   letter-spacing: 0.03em;
   color: var(--second-color);
   text-align: center;
@@ -1224,7 +1224,7 @@ img {
   .modal__description-callu {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.5;
+    line-height: decimal-round(1.5, 2);
     letter-spacing: 0.03em;
   }
 }
@@ -1233,7 +1233,7 @@ img {
   .modal__description-callu {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: decimal-round(1.15, 2);
     letter-spacing: 0.03em;
   }
 }
@@ -1241,7 +1241,7 @@ img {
 .modal__field {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.17;
+  line-height: decimal-round(1.16667, 2);
   letter-spacing: 0.01em;
   cursor: pointer;
   margin-bottom: 10px;
@@ -1300,7 +1300,7 @@ img {
 .modal__message::placeholder {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.17;
+  line-height: decimal-round(1.16667, 2);
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
@@ -1316,7 +1316,7 @@ img {
   justify-content: space-between;
   font-weight: 400;
   font-size: 8px;
-  line-height: 1.13;
+  line-height: decimal-round(1.125, 2);
   letter-spacing: 0.03em;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -1326,7 +1326,7 @@ img {
   .modal__check-desc {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.17;
+    line-height: decimal-round(1.16667, 2);
     letter-spacing: 0.03em;
   }
 }
@@ -1335,7 +1335,7 @@ img {
   .modal__check-desc {
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.71;
+    line-height: decimal-round(1.71429, 2);
     letter-spacing: 0.03em;
   }
 }
@@ -1435,7 +1435,7 @@ img {
 .mobile-menu__nav-link {
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: decimal-round(1.175, 2);
   letter-spacing: 0.02em;
   color: var(--second-color);
   transition: color 250ms var(--timing-function);
@@ -1460,7 +1460,7 @@ img {
 .mobile-menu__phone-link {
   font-weight: 500;
   font-size: 22px;
-  line-height: 1.18;
+  line-height: decimal-round(1.18182, 2);
   letter-spacing: 0.01em;
   color: var(--accent-color);
 }
@@ -1468,7 +1468,7 @@ img {
 .mobile-menu__mail-link {
   font-weight: 500;
   font-size: 24px;
-  line-height: 1.17;
+  line-height: decimal-round(1.16667, 2);
   letter-spacing: 0.02em;
   color: var(--main-color);
 }
@@ -1492,7 +1492,7 @@ img {
 .mobile-menu__social-link {
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.83;
+  line-height: decimal-round(1.83333, 2);
   letter-spacing: 0.02em;
   color: var(--accent-color);
 }
@@ -1501,13 +1501,13 @@ img {
   .mobile-menu__phone-link {
     font-weight: 500;
     font-size: 34px;
-    line-height: 1.18;
+    line-height: decimal-round(1.17647, 2);
     letter-spacing: 0.02em;
   }
   .mobile-menu__social-link {
     font-weight: 500;
     font-size: 18px;
-    line-height: 1.22;
+    line-height: decimal-round(1.22222, 2);
     letter-spacing: 0.02em;
   }
   .mobile-menu__social-item {
